# TalkFlow_WWD

./: PreparingData.py  README.md  TalkFlow_WWD.ipynb  pyproject.toml  test.py  testAudioBuffer.py  testingWakeWord.py
scripts/: prepare_data.py  run_detector.py
src/buffer/: audio_buffer.py
src/model/: detector.py
src/recording/: recorder.py
tests/: test_detector.py
