[project]
name = "wake-word-detector"
version = "0.1.0"
description = "Real-time wake word detection using audio buffer and a Keras model"
authors = [{ name = "Tapo4ek" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "sounddevice",
    "librosa",
    "numpy",
    "scipy",
    "soundfile",
    "tensorflow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "jupyter",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
